examples/fail/tuple_member2.niu
fn main() -> void {
  let x = 0;
  let a = x.0;
}
